Token (walkin ) booking page is side aligned is fixed

--- a/src/app/business/modules/check-ins/check-in/provider-checkin.component.css
+++ b/src/app/business/modules/check-ins/check-in/provider-checkin.component.css
@@ -996,6 +996,8 @@ a {
 .col-12 {
   flex: 0 0 100%;
   max-width: 100%;
+  padding-left: 20px!important;
+  padding-right: 20px !important;
 }
 @media (min-width: 768px)
 {
